# usmle-tot

./: .gitignore  main.py  pyproject.toml  run.sh
src/: configure_llm.py  evaluate.py  input_utils.py  io.py  output_utils.py  prompts.py  tot.py
